tools/flowc/tests/errors/error38.flow
import fusion;
import transforms;

Struct ::= Struct1, Struct2;
	Struct1 : (style : string);
	Struct2 : (style : string);

main() {
	a : DynamicBehaviour<Struct> = make(Struct1("flowc"));
	
	selectu(a, \line -> line.style); // Works fine

	// Does not realize that line is Struct, and not just Struct1.
	fselect(a, FLift(\line -> line.style)) // Crashes
	|> fuse;

	next(a, Struct2("java"));
}
